--- a/src/locales/es/alexandria.json
+++ b/src/locales/es/alexandria.json
@@ -1,10 +1,10 @@
 {
   "alexandria": {
     "siteMetadata": {
-      "description": "Explora la testnet de Alexandria"
+      "description": "Explora la testnet Alexandria"
     },
     "hero": {
-      "title": "Red de Alexandria",
+      "title": "Red Alexandria",
       "text": "The Alexandria release focuses on important technical updates which will facilitate more efficient future development.",
       "chipText": "¿Qué es esto?"
     },
@@ -13,26 +13,26 @@
     },
     "modal": {
       "title": "Alexandria",
-      "text": "Hay dos esfinges en el sitio del Pilar de Pompeyo en Alejandría, Egípto. Las esfinges y las columnas asociadas son uno de los monumentos más antiguos e importantes de Alejandria. <0/><0/> La esfinge de alejandria no debe confundirse con la Gran Essfinge ubicada en Giza, a poco menos de 200km al suroeste de Alejandra."
+      "text": "Hay dos esfinges en el sitio del Pilar de Pompeyo en Alejandría, Egipto. Las esfinges y las columnas asociadas son uno de los monumentos más antiguos e importantes de Alejandría. <0/><0/> Las esfinges de Alejandría no deben confundirse con la más conocida Gran Esfinge ubicada en Guiza, a poco menos de 200km al suroeste de Alejandría."
     },
     "criticalDocuments": {
       "title": "Documentos críticos",
       "releasePlan": {
         "title": "Plan de lanzamiento",
-        "text": "Lea el plan de lanzamiento tal como se hizo durante la etapa de planificación y aprenda más sobre cómo evolucionó el desarrollo."
+        "text": "Lee el plan de lanzamiento tal como se hizo durante la etapa de planificación y aprenda más sobre cómo evolucionó el desarrollo."
       },
       "blogPost": {
-        "title": "Blog de Anuncio",
-        "text": "Lea una breve introducción a la testnet de Alexandria y sus objetivos."
+        "title": "Blog de Anuncios",
+        "text": "Lee una breve introducción a la testnet Alexandria y sus objetivos."
       }
     },
     "testnetGoals": {
       "title": "Objetivos de la testnet",
-      "subtitle": "Las metas que se enumeran a continuación son una representación simplificada de nuestros principales objetivos para la testnet de Alexandria.",
+      "subtitle": "Las metas que se enumeran a continuación son una representación simplificada de nuestros principales objetivos para la testnet Alexandria.",
       "goals": {
         "membershipModule": {
           "title": "Limpiando el módulo de membresía",
-          "text": "Abordar la deuda técnica en el módulo de membresía y hacer posible la transición al uso de membresías como el único identificador principal en el sistema en versiones futuras."
+          "text": "Abordar la deuda técnica en el módulo de membresía y hacer posible la transición al uso de membresías como el único identificador principal en el sistema en futuros lanzamientos."
         },
         "substrateVersion": {
           "title": "Comience a usar Substrate v2.0.0 RC4",
@@ -45,11 +45,11 @@
       }
     },
     "roles": {
-      "title": "Funciones incentivadas para la red de Alexandria"
+      "title": "Roles incentivados para la Red Alexandria"
     },
     "map": {
       "title": "Alexandria",
-      "text": "<0>Alejandría fue fundada aproximadamente en el 331 a. C. por Alejandro Magno.</0> La ciudad era más conocida por el Faro de Alejandría, una de las Siete Maravillas del Mundo Antiguo, asi como por su colosal Gran Biblioteca.<1/><1/> Alejandría era el centro intelectual y cultural del antguo mundo mediterráneo para gran parte de la época helenística y de la antigüedad tardía. En su momento era la ciudad más grande del mundo antiguo antes de ser superada finalmente por Roma.<1/><1/><2><0/> Lea el artículo subido</2>"
+      "text": "<0>Alejandría fue fundada aproximadamente en el 331 a. C. por Alejandro Magno.</0> La ciudad era más conocida por el Faro de Alejandría, una de las Siete Maravillas del Mundo Antiguo, así como por su colosal Gran Biblioteca.<1/><1/> Alejandría era el centro intelectual y cultural del antiguo mundo mediterráneo para gran parte de la época helenística y de la antigüedad tardía. En su momento era la ciudad más grande del mundo antiguo antes de ser superada finalmente por Roma.<1/><1/><2><0/> Leer el artículo del blog</2>"
     }
   }
 }
