--- a/src/locales/es/babylon.json
+++ b/src/locales/es/babylon.json
@@ -1,11 +1,11 @@
 {
   "babylon": {
     "siteMetadata": {
-      "description": "Explora la testnet de Babylon"
+      "description": "Explora la testnet Babylon"
     },
     "hero": {
       "title": "Red de Babylon",
-      "text": "La versión de Babylon ofrece mejoras que aumentan enormemente la experiencia de publicación y consumo de videos.",
+      "text": "El lanzamiento de Babylon ofrece mejoras que aumentan enormemente la experiencia de publicación y consumo de videos.",
       "chipText": "¿Qué es esto?"
     },
     "heroCard": {
@@ -13,7 +13,7 @@
     },
     "modal": {
       "title": "Torre de Babel",
-      "text": "La historia de la Torre de Babel es el origen de un mito destinado a explicar por qué los pueblos del mundo hablan diferentes idiomas.<0/><0/>Según la historia, una raza humana unida en las generaciones posteriores al Gran Diluvio, hablando un solo idioma y emigrando hacia el este, llega a la tierra de Shinar. Allí acuerdan construir una ciudad y una torre lo suficientemente alta como para llegar al cielo.<0/><0/> Dios, al observar su ciudad y torre, confunde su discurso  para que ya no puedan entenderse, y los esparce por todo el mundo."
+      "text": "La historia de la Torre de Babel es el origen de un mito destinado a explicar por qué los pueblos del mundo hablan diferentes idiomas.<0/><0/>Según la historia, una raza humana unida en las generaciones posteriores al Gran Diluvio, hablando un solo idioma y emigrando hacia el este, llega a la tierra de Shinar. Allí acuerdan construir una ciudad y una torre lo suficientemente alta como para llegar al cielo.<0/><0/> Dios, al observar su ciudad y torre, confunde su discurso para que ya no puedan entenderse, y los esparce por todo el mundo."
     },
     "criticalDocuments": {
       "title": "Documentos críticos",
@@ -23,33 +23,33 @@
       },
       "blogPost": {
         "title": "Blog de Anuncio",
-        "text": "Lea una breve introducción a la testnet de Babylon y sus objetivos."
+        "text": "Lea una breve introducción a la testnet Babylon y sus objetivos."
       }
     },
     "testnetGoals": {
       "title": "Objetivos de la testnet",
-      "subtitle": "Las metas que se enumeran a continuación son una representación simplificada de nuestros principales objetivos para la testnet de Babylon.",
+      "subtitle": "Las metas que se enumeran a continuación son una representación simplificada de nuestros principales objetivos para la testnet Babylon.",
       "goals": {
         "atlas": {
           "title": "Lanzar Atlas 0.1",
-          "text": "Esta será la versión inicial de nuestro cliente consumidor de contenido, con el objetivo de ser considerablemente más eficaz que la actual experiencia mediática de Pioneer."
+          "text": "Esta será la versión inicial de nuestro cliente de consumo de contenido, con el objetivo de ser considerablemente más eficaz que la actual experiencia de medios Pioneer."
         },
         "contentDirectory": {
           "title": "Implementar un nuevo directorio de contenido y un grupo de trabajo correspondiente",
           "text": "Modificaremos el directorio de contenido para permitir un nuevo modelo de datos respaldado por nuevos esquemas. También realizaremos algunas mejoras asociadas al Grupo de Trabajo del Curador de Contenido."
         },
         "hydraNode": {
-          "title": "Se desarrolla el primer Joystream Hydra node son soporte al directorio de contenido ",
+          "title": "Despliegue del primer nodo Joystream Hydra autoalojado soportando sólo el directorio de contenidos",
           "text": "Es necesario seguir trabajando en nuestro framework Hydra para admitir el nuevo directorio de contenido."
         }
       }
     },
     "roles": {
-      "title": "Funciones incentivadas para la red de Babylon"
+      "title": "Roles incentivados para la red Babylon"
     },
     "map": {
       "title": "Babilonia",
-      "text": "<0>Babilonia fue la ciudad capital del Imperio Babilónico, un reino en la antigua Mesopotamia hace casi 4000 años.</0> Fue construida a lo largo de las orillas izquierda y derecha del río Éufrates con terraplenes empinados para contener las inundaciones estacionales del río. <1/><1/> La ciudad se considera de gran importancia histórica y cultural. Los Jardines Colgantes de Babilonia fueron una de las Siete Maravillas del Mundo Antiguo y Babilonia también fue supuestamente el sitio de la Torre de Babel.<1/><1/><2><0/> Lea el artículo subido</2>"
+      "text": "0>Babilonia fue la ciudad capital del Imperio Babilónico, un reino en la antigua Mesopotamia hace casi 4000 años.</0> Fue construida a lo largo de las orillas izquierda y derecha del río Éufrates con terraplenes empinados para contener las inundaciones estacionales del río. <1/><1/> La ciudad se considera de gran importancia histórica y cultural. Los Jardines Colgantes de Babilonia fueron una de las Siete Maravillas del Mundo Antiguo y Babilonia también fue supuestamente el sitio de la Torre de Babel.<1/><1/><2><0/> Leer el artículo del blog</2>"
     }
   }
 }
