--- a/src/locales/es/constantinople.json
+++ b/src/locales/es/constantinople.json
@@ -1,12 +1,12 @@
 {
   "constantinople": {
     "siteMetadata": {
-      "description": "Explora la testnet de Constantinople"
+      "description": "Explora la testnet Constantinople"
     },
     "hero": {
-      "title": "Red de Constantinople",
-      "text": "La red de pruebas de Constantinople introduce un sistema de propuestas mejorado y un modelo de tokens respaldados por fiat para la compensación de los participantes.",
-      "chipText": "¿Que es eso?"
+      "title": "Red Constantinople",
+      "text": "La red de pruebas Constantinople introduce un sistema de propuestas mejorado y un modelo de tokens respaldados por fiat para la compensación de los participantes.",
+      "chipText": "¿Qué es esto?"
     },
     "heroCard": {
       "title": "REEMPLAZADO POR ALEXANDRIA EL"
@@ -22,30 +22,30 @@
         "text": " Lea el plan de lanzamiento tal como se hizo durante la etapa de planificación y aprenda más sobre cómo evolucionó el desarrollo."
       },
       "blogPost": {
-        "title": "Blog de Anuncio",
-        "text": "Lea una breve introducción a la testnet de Constantinople y sus objetivos."
+        "title": "Blog de Anuncios",
+        "text": "Lea una breve introducción a la testnet Constantinople y sus objetivos."
       }
     },
     "testnetGoals": {
       "title": "Objetivos de la tesnet",
-      "subtitle": "Las metas que se enumeran a continuación son una representación simplificada de nuestros principales objetivos para la testnet de Constantinople.",
+      "subtitle": "Las metas que se enumeran a continuación son una representación simplificada de nuestros principales objetivos para la testnet Constantinople.",
       "goals": {
         "proposalSystem": {
           "title": "Lanzar un nuevo sistema de propuestas",
-          "text": "La red de pruebas de Constantinopla se construye en torno a la introducción de un sistema de propuestas que refuerza la estructura de gobierno de la plataforma, desplazando la responsabilidad diaria de supervisar la red y asignar recursos a los votantes y al consejo."
+          "text": "La red de pruebas Constantinople se construye en torno a la introducción de un sistema de propuestas que refuerza la estructura de gobierno de la plataforma, desplazando la responsabilidad diaria de supervisar la red y asignar recursos a los votantes y al consejo."
         },
         "tokenModel": {
           "title": "Introducir un modelo de tokens respaldados por fiat",
-          "text": "Constantinopla introduce una nueva estructura de incentivos, con un fondo fiduciario (USD) que respalda los tokens de testnet, estableciendo un sistema económico más realista para la plataforma."
+          "text": "Constantinople introduce una nueva estructura de incentivos, con un fondo fiduciario (USD) que respalda los tokens de la testnet, estableciendo un sistema económico más realista para la plataforma."
         }
       }
     },
     "roles": {
-      "title": "Funciones incentivadas para la red de Constantinople"
+      "title": "Funciones incentivadas para la red Constantinople"
     },
     "map": {
       "title": "Constantinople",
-      "text": "<0>Constantinopla fue la capital del Imperio Romano de Oriente durante el siglo IV.</0> Era famosa por sus enormes y complejas defensas, así como por sus obras maestras arquitectónicas y sus palacios aristocráticos opulentos. Al igual que la ciudad, esperamos que nuestro testnet de Constantinopla sea un digno sucesor de Roma.<1/><1/><2><0/> Lea el artículo subido</2>"
+      "text": "<0>Constantinopla fue la capital del Imperio Romano de Oriente durante el siglo IV.</0> Era famosa por sus enormes y complejas defensas, así como por sus obras maestras arquitectónicas y sus palacios aristocráticos opulentos. Al igual que la ciudad, esperamos que nuestra testnet Constantinople sea un digno sucesor de Roma.<1/><1/><2><0/> Leer el artículo del blog</2>"
     }
   }
 }
