--- a/src/locales/es/get-started.json
+++ b/src/locales/es/get-started.json
@@ -1,45 +1,45 @@
 {
   "getStarted": {
     "siteMetadata": {
-      "title": "Como empezar",
-      "description": "Conozca cómo contribuir y participar en el proyecto Joystream"
+      "title": "Cómo empezar",
+      "description": "Conoce cómo contribuir y participar en el proyecto Joystream"
     },
     "hero": {
       "title": "Cómo contribuir y participar",
-      "subtitle": "Lea más sobre las formas actuales de añadir valor al proyecto y ganar recompensas por hacerlo.",
+      "subtitle": "Leer más acerca de las formas actuales de añadir valor al proyecto y ganar recompensas por hacerlo.",
       "buttonText": "Ver oportunidades",
       "imageAlt": "empezar a ser un héroe"
     },
     "howToStart": {
       "title": "Cómo empezar",
-      "discord": "Únase a nuestro Discord",
-      "tokens": "Reciba tokens de nuestra testnet gtaris",
-      "membership": "Crear afiliación en la cadena",
-      "opportunities": "Elija una de las siguientes actividades"
+      "discord": "Únete a nuestro Discord",
+      "tokens": "Recibe tokens de la testnet gratis",
+      "membership": "Crear membresía on-chain",
+      "opportunities": "Elije una de las siguientes actividades"
     },
     "opportunities": {
       "title": "Oportunidades",
       "bounties": {
         "title": "Recompensas",
-        "text": "Las bonificacionesse dan por hacer tardeas que cualquiera puede intentar abordar a cambio de alguna recompensa. Son creadas por Jsgenesis o por el Consejo.",
+        "text": "Las bonificacionesse dan por realizar tareas que cualquiera puede intentar abordar a cambio de alguna recompensa. Son creadas por Jsgenesis o por el Consejo.",
         "imageAlt": "bolsa de dinero"
       },
       "bountiesCarousel": {
         "all": "Todo",
-        "coding": "Codificador",
+        "coding": "Programador",
         "design": "Diseñador",
         "marketing": "Marketing",
         "research": "Investiga",
         "contentCreation": "Creador de contenido"
       },
       "roles": {
-        "title": "Funciones",
-        "text": "Nuestra actual red de pruebas también le permite participar en algunas de las funciones de la plataforma que estarán disponibles en la red principal.<0/><0/>La participación en estas funciones se recompensa con tJOY (nuestro token de testnet), que está respaldado por las reservas fiat de Jsgenesis y es canjeable por bitcoin cash.",
+        "title": "Roles",
+        "text": "Nuestra actual red de pruebas también le permite participar en algunos de los roles de la plataforma que estarán disponibles en la red principal.<0/><0/>La participación en estos roles se recompensa con tJOY (nuestro token de la testnet), que está respaldado por las reservas fiat de Jsgenesis y es canjeable por bitcoin cash.",
         "imageAlt": "máscaras"
       }
     },
     "activeRoles": {
-      "title": "Funciones activas en la red de pruebas actual",
+      "title": "Roles activos en la red de pruebas actual",
       "validatorText": "Un validador es un actor que comprueba la validez de los bloques recién construidos, propone nuevos bloques y participa en el proceso de consenso para incorporar nuevos bloques a la cadena. A los validadores se les suele pagar una cantidad fija por cada bloque producido. Este papel tiene un propósito muy similar al de los mineros en la cadena de bloques de Bitcoin.",
       "councilMemberText": "Los miembros del Consejo son elegidos por las partes interesadas en el programa para que actúen en interés de la plataforma a largo plazo. Son responsables de asignar recursos y de contratar a los líderes de los grupos de trabajo para que dirijan las operaciones diarias de la plataforma. Esto se hace a través del sistema de propuestas, que permite a cualquier usuario presentar sugerencias para cambiar la plataforma de alguna manera.",
       "storageProviderText": "Hay activos críticos de la plataforma que no viven en la cadena de bloques, como los contenidos multimedia. La integridad de estos activos está asegurada por la cadena, pero un conjunto separado de nodos de almacenamiento y distribución permite cargar y descargar dichos datos. El proveedor de almacenamiento participa en esta actividad, concretamente almacenando grandes cantidades de datos.",
